# perp-trader

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml  fly.toml  perp_trader.db  positions.db
.sqlx/: query-2575b41736250064cc6f87caab00516faaa1bd2510924a90a53de8861eb2c849.json  query-32704c32fb8ff172a8e46d80bc9dc1fcd5bd69f9267e3bfc84439b73dd575193.json  query-346552bfd91124bb072a8ca765e0304023147112845ae23cd1781715629a727e.json  query-43fe2930971230d47d06d6085c775c30c34babfd5af8696a9664b3112f862f74.json  query-64b1eaa9e451353d9a5ba3c64bffccda3b43c298e9ae1c0ddda6cfcff150b493.json  query-6ae1e0bd82ba12ac1a713ced2560c8d5cdd5e249cc84852f2075e7629eeace0d.json  query-6f0816ed3b213ca6b116e0c694ec3763cdb91555374711ed48a629ab63d0ac72.json  query-b2309489178a7fac017634e570d7d38208aab6375099c096b10b442437c592c7.json  query-b304a35ff23d3d1a13f081cdfe2364f1e0ef18dcd30be58b371d70fba48c7b50.json  query-b4284068075a635c2b075404d2fc81cd8707cf9c79131dff25d018f3525e9d9c.json  query-d4afc714c183799c92fe4db5868b870808122f8423b61443724754bb54e093bf.json  query-e05473d9edf3406e8a0ca3682cb320dd89a8a76d0f14e7645a13aaf431478f63.json  query-e0cc17765d32c75ab87d305b27ebb8835b216f83af83f2bd1884b1127d00ceb2.json  query-e5bab634b6838d269edb82bb5dd66cc4863dc417fcc2f8e65c1a9cb421a80f39.json
src/: config.rs  error.rs  main.rs  request.rs
src/alert/: telegram.rs
src/dex/: mod.rs
src/dex/backpack/: client.rs
src/helpers/: encode.rs  mod.rs
src/model/: account.rs  balance.rs  exchange.rs  mod.rs  position.rs  token.rs
src/perp/: mod.rs  traits.rs
src/perp/backpack/: client.rs  mod.rs
src/perp/hibachi/: client.rs  mod.rs
src/perp/lighter/: client.rs  mod.rs  models.rs  signer.rs
src/perp/ranger/: client.rs  mod.rs  models.rs
src/storage/: database.rs  mod.rs  storage_position.rs  storage_strategy.rs
src/trader/: client.rs  mod.rs  monitor.rs  storage.rs  strategy.rs  wallet.rs
