[package]
name = "perp-trader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bpx-api-client = "0.7.2"
dotenv = "0.15.0"
log = "0.4.28"
pretty_env_logger = "0.5.0"
reqwest = "0.12.24"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
