[package]
name = "perp-trader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1"
bpx-api-client = "0.7.2"
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
dotenv = "0.15.0"
log = "0.4.28"
pretty_env_logger = "0.5.0"
rand = "0.8"
reqwest = { version = "0.12.24", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rust_decimal = "1.36"
rust_decimal_macros = "1.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
