[package]
name = "perp-trader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1"
bpx-api-client = "0.7.2"
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
dotenv = "0.15.0"
futures = "0.3"
log = "0.4.28"
pretty_env_logger = "0.5.0"
rand = "0.8"
reqwest = { version = "0.12.24", features = ["json"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
rust_decimal = "1.36"
rust_decimal_macros = "1.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
argon2 = { version = "0.5", default-features = false, features = ["std"] }
aes-gcm = { version = "0.10", features = ["aes"] }
pbkdf2 = "0.12"
sha2 = "0.10"
rand_core = "0.6"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
base64 = "0.22"
hex = "0.4"
alloy = "1.0.41"
http = "1.3.1"
urlencoding = "2.1"
libloading = "0.8"
libc = "0.2"
